add link to ucp templates from create experiment modal window

--- a/src/templates/create-new-item-modal.html
+++ b/src/templates/create-new-item-modal.html
@@ -1,5 +1,11 @@
 {# Modal window for creating a new entity #}
 {# requires: entityType + {experiments,resources}CategoriesArr #}
+{% if entityType == 'experiments' %}
+  {% set createNewCategoryArr = templatesArr %}
+{% else %}
+  {% set createNewCategoryArr = categoryArr|default(itemsCategoryArr) %}
+{% endif %}
+
 <div class='modal fade' id='createModal_{{ entityType }}' tabindex='-1' role='dialog' aria-labelledby='createModalLabel_{{ entityType }}' aria-hidden='true'>
   <div class='modal-dialog modal-lg' role='document'>
     <div class='modal-content'>
@@ -9,11 +15,16 @@
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
-      <div class='modal-body'>
+      <div class='modal-body mb-3'>
         {% if entityType == 'experiments' %}
-          {% set createNewCategoryArr = templatesArr %}
-        {% else %}
-          {% set createNewCategoryArr = categoryArr|default(itemsCategoryArr) %}
+          <div class='d-flex'>
+            {% if not App.teamArr.force_exp_tpl %}
+              <a style='border: 1px #ccc solid;' class='btn btn-light mt-1' href='#' data-action='create-entity' data-type='{{ entityType }}' data-tplid='0'>{{ 'Default template'|trans }}</a>
+              <a style='border: 1px #ccc solid;' class='btn btn-light ml-1 mt-1' href='#' data-action='create-entity' data-type='{{ entityType }}' data-tplid=''>{{ 'Blank experiment'|trans }}</a>
+            {% endif %}
+        <a style='border: 1px #ccc solid;' class='btn btn-light ml-auto mt-1' title='{{ 'Manage templates'|trans }}' href='/ucp.php?tab=3'><i class='fas fa-cog'></i></a>
+          </div>
+          <hr>
         {% endif %}
         {% for category in createNewCategoryArr %}
           <a style='color:#{{ category.color }}; border: 1px #ccc solid;' class='btn btn-light mt-1' href='#' data-action='create-entity' data-type='{{ entityType }}' data-tplid='{{ category.id }}'>
@@ -22,15 +33,9 @@
           {% endif %}
           {{ category.title|raw }}</a>
         {% endfor %}
-        <hr>
         {# show add button to admin, for items #}
         {% if entityType == 'items' and App.Users.isAdmin %}
           <a style='color:#343434; border: 1px #ccc solid;' class='btn btn-light mt-1' href='/admin.php?tab=4#{{ entityType }}CategoriesAnchor'>{{ 'Add category…'|trans }}</a>
-        {% else %}
-          {% if not App.teamArr.force_exp_tpl and entityType == 'experiments' %}
-            <a style='border: 1px #ccc solid;' class='btn btn-light mt-1' href='#' data-action='create-entity' data-type='{{ entityType }}' data-tplid='0'>{{ 'Default template'|trans }}</a>
-            <a style='border: 1px #ccc solid;' class='btn btn-light mt-1' href='#' data-action='create-entity' data-type='{{ entityType }}' data-tplid=''>{{ 'No template'|trans }}</a>
-          {% endif %}
         {% endif %}
       </div>
     </div>
