use button element for close button on sidepanels

--- a/src/templates/todolist-panel.html
+++ b/src/templates/todolist-panel.html
@@ -1,5 +1,5 @@
 <div class='side-panel' id='todolistPanel' hidden>
-  <div data-action='toggle-todolist' title='{{ 'Close'|trans }}' class='float-right mr-3'><i class='fas fa-xmark fa-2x'></i></div>
+  <button type='button' data-action='toggle-todolist' title='{{ 'Close'|trans }}' class='btn float-right mr-3'><i class='fas fa-xmark fa-2x'></i></button>
   <div class='p-3'>
     <h3 title='{{ 'Toggle visibility'|trans }}' tabindex='0' role='button' data-action='toggle-next' class='mb-3 py-2'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Todolist'|trans }}</h3>
 
