--- a/src/templates/favtags-panel.html
+++ b/src/templates/favtags-panel.html
@@ -1,5 +1,5 @@
 <div class='side-panel' id='favtagsPanel' hidden>
-  <button type='button' data-action='toggle-favtags' title='{{ 'Close'|trans }}' class='btn float-right mr-2'><i class='fas fa-xmark fa-2x'></i></button>
+  <button type='button' data-action='toggle-favtags' aria-label='{{ 'Close'|trans }}' title='{{ 'Close'|trans }}' class='btn float-right mr-2'><i class='fas fa-xmark fa-2x'></i></button>
   <div class='p-3'>
     <h3 class='mb-3'>{{ 'Favorite tags'|trans }}</h3>
     <div class='input-group'>
