--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -126,7 +126,7 @@
 {# UPLOAD FORM: not togglable or dropzone doesn't register #}
 <h3 class='d-inline togglable-section-title'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Attach a file'|trans }}</h3>
 {% if App.Config.configArr.debug -%}
-  <!-- [html-validate-disable-next wcag/h32: no submit button for navbar search field] -->
+  <!-- [html-validate-disable-next wcag/h32: no submit button for dropzone input] -->
 {%- endif %}
 <form action='api/v2/{{ Entity.type }}/{{ Entity.id }}/uploads' class='dropzone hl-hover-gray mt-2 rounded' id='elabftw-dropzone'></form>
 <hr>
