--- a/src/templates/upload-dropdown-menu.html
+++ b/src/templates/upload-dropdown-menu.html
@@ -1,6 +1,6 @@
 {# DROPDOWN MENU FOR UPLOAD #}
 <div class='dropdown'>
-  <button type='button' class='btn btn-link py-0 float-right px-2' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}'>
+  <button type='button' class='btn btn-link hl-hover-gray py-0 float-right px-2' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}'>
     <i class='fas fa-ellipsis-v'></i>
   </button>
 
