translate "please wait..." everywhere

--- a/src/templates/create-idp-modal.html
+++ b/src/templates/create-idp-modal.html
@@ -8,7 +8,7 @@
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
-      <div id='createIdpForm' class='modal-body' data-wait='{{ 'Please wait…' }}'>
+      <div id='createIdpForm' class='modal-body' data-wait='{{ 'Please wait…'|trans }}'>
         <div class='d-flex justify-content-between'>
           <label for='name' class='col-form-label'>{{ 'Friendly name'|trans }}</label>
           <input class='form-control col-md-4' type='text' placeholder='Acme Looniversity' id='name' name='name' required />
