--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -182,7 +182,7 @@
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
-      <div class='modal-body' data-wait='{{ 'Please wait…' }}'>
+      <div class='modal-body' data-wait='{{ 'Please wait…'|trans }}'>
         <ul>
             <li class='tip'>
                 {{ 'Make sure to read the %suser guide%s.'|trans|format("<a href='https://doc.elabftw.net/user-guide.html'>", "</a>")|raw }}
