--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -13,7 +13,7 @@
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
-      <div class='modal-body' data-wait='{{ 'Please wait…' }}'>
+      <div class='modal-body' data-wait='{{ 'Please wait…'|trans }}'>
         <h3>Search terms</h3>
         <p>The search is performed against title, body, date, and elabid.<br>
             The entire team will be searched unless there is an author field.</p>
