--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -14,7 +14,7 @@
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
-      <div class='modal-body' data-wait='{{ 'Please wait…' }}'>
+      <div class='modal-body' data-wait='{{ 'Please wait…'|trans }}'>
         <label for='newTeamName'>{{ 'Name'|trans }}</label>
         <input type='text' placeholder='{{ 'Enter team name'|trans }}' id='newTeamName' class='form-control' aria-label='{{ 'Enter team name'|trans }}'>
       </div>
