--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -23,7 +23,7 @@
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
-      <div class='modal-body' data-wait='{{ 'Please wait…' }}'>
+      <div class='modal-body' data-wait='{{ 'Please wait…'|trans }}'>
         {# "placeholder" will be replaced with real title by js #}
         <h3 id='eventTitle' class='editable hl-hover'>placeholder</h3>
         {# START AND END TIMES #}
