--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -139,8 +139,8 @@
               {% if ext matches '/(jpg|jpeg|png|gif|pdf|eps|svg|heic)$/i' %}
                 <div class='text-center'>
                   <a class='text-break' href='app/download.php?f={{ upload.long_name }}&amp;storage={{ upload.storage }}&amp;name={{ upload.real_name }}'
-                     {% if upload.real_name matches '/(jpg|jpeg|png|gif)$/i' %}data-fancybox='group' data-caption='{{ upload.real_name }}'{% endif %}
-                    {% if upload.comment %}title='{{ upload.comment }}' data-caption='{{ upload.comment }}'{% endif %}
+                    {% if upload.real_name matches '/(jpg|jpeg|png|gif)$/i' %}data-fancybox='group' data-caption='{{ upload.real_name|escape('html_attr') }}'{% endif %}
+                    {% if upload.comment %}title='{{ upload.comment }}' data-caption='{{ upload.comment|escape('html_attr') }}'{% endif %}
                   >
               {% endif %}
               {% set thumb_name = upload.long_name ~ '_th.jpg' %}
@@ -206,7 +206,7 @@
             {% elseif ext in constant('Elabftw\\Elabftw\\Extensions::DNA') %}
               <div class='viewer-ove'
                 data-href='app/download.php?f={{ upload.long_name }}&amp;storage={{ upload.storage }}&amp;name={{ upload.real_name }}'
-                data-real-name='{{ upload.real_name }}'
+                data-real-name='{{ upload.real_name|escape('html_attr') }}'
                 id='OVE_{{ upload.id }}'>
               </div>
 
@@ -215,8 +215,8 @@
               <span class='eye-overlay'
                 data-action='toggle-modal' data-target='plainTextModal' data-ext='{{ ext }}'
                 data-storage='{{ upload.storage }}'
-                data-path='{{ upload.long_name }}'
-                data-name='{{ upload.real_name }}'>
+                data-path='{{ upload.long_name|escape('html_attr') }}'
+                data-name='{{ upload.real_name|escape('html_attr') }}'>
                 <i class='fas fa-file-alt thumb rounded mx-auto d-block text-center'></i>
               </span>
 
