--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -1,9 +1,5 @@
 {# dim the experiment a bit if it's not yours #}
 {% set randomId = random() %}
-{% set owner = '' %}
-{% if (Entity.Users.userData.userid != item.userid) and not App.Session.has('is_anon') %}
-  {% set owner = "%s <a href='?owner=%s'>%s</a>"|format('by'|trans, item.userid, item.fullname) %}
-{% endif %}
 
 <section class='item pl-3 d-flex' id='parent_{{ randomId }}' style='--left-color: #{{ item.category_color|default('bdbdbd') }};'>
 
@@ -69,7 +65,9 @@
     </div>
     {# owner #}
     <div class='owner'>
-      {{ owner }}
+      {% if (Entity.Users.userData.userid != item.userid) and not App.Session.has('is_anon') %}
+        {{ 'by'|trans }} <a href='?owner={{ item.userid }}'>{{ item.fullname }}</a>
+      {% endif %}
     </div>
 
     {# end second line #}
