--- a/src/templates/upload-more-info.html
+++ b/src/templates/upload-more-info.html
@@ -1,10 +1,8 @@
-<div id='moreInfo_{{ upload.id }}' class='d-none'>
-  <i class='fas fa-fw fa-hdd mr-1'></i>
-  <p class='d-inline'>{{ 'Storage:'|trans }} {% if upload.storage == '1' %} {{ 'Local filesystem'|trans }} {% endif %} {% if upload.storage == '2' %} S3 bucket {% endif %}</p><br>
-  <i class='fas fa-fw fa-fingerprint mr-1'></i>
-  <p class='d-inline' style='word-break: break-all;'>{{ upload.hash_algorithm }}: {{ upload.hash }}</p><br>
-  <i class='fas fa-user mr-1'></i>
-  <p class='d-inline'>{{ 'Uploaded by %s'|trans|format(upload.fullname) }}</p><br>
-  <i class='fas fa-calendar-alt mr-1'></i>
-  <p class='d-inline'>{{ 'Created at %s'|trans|format(upload.created_at) }}</p>
-</div>
+<i class='fas fa-fw fa-hdd mr-1'></i>
+<p class='d-inline'>{{ 'Storage:'|trans }} {% if upload.storage == '1' %} {{ 'Local filesystem'|trans }} {% endif %} {% if upload.storage == '2' %} S3 bucket {% endif %}</p><br>
+<i class='fas fa-fw fa-fingerprint mr-1'></i>
+<p class='d-inline' style='word-break: break-all;'>{{ upload.hash_algorithm }}: {{ upload.hash|default('Not calculated'|trans) }}</p><br>
+<i class='fas fa-user mr-1'></i>
+<p class='d-inline'>{{ 'Uploaded by %s'|trans|format(upload.fullname) }}</p><br>
+<i class='fas fa-calendar-alt mr-1'></i>
+<p class='d-inline'>{{ 'Created at %s'|trans|format(upload.created_at) }}</p>
