--- a/src/templates/upload-dropdown-menu.html
+++ b/src/templates/upload-dropdown-menu.html
@@ -23,7 +23,7 @@
   {% endif %}
 
   {# Edit filename (available in view mode too) #}
-  {% if not upload.immutable and not Entity.isReadOnly %}
+  {% if not upload.immutable and not Entity.isReadOnly and App.Users.userData.uploads_layout != 0 %}
     <button type='button' class='dropdown-item' data-action='rename-upload' data-id='{{ upload.id }}' data-type='{{ upload.type }}'
       data-itemid='{{ upload.item_id }}' data-msg='{{ 'Edit filename'|trans }}'>
       <i class='fas fa-fw fa-pencil-alt mr-1'></i>{{ 'Edit filename'|trans }}
@@ -77,19 +77,21 @@
   {% endif %}
 
   {# More info #}
-  <button type='button' class='dropdown-item' data-action='more-info-upload' data-uploadid='{{ upload.id }}'>
-    <i class='fas fa-fw fa-info-circle mr-1'></i>{{ 'More information'|trans }}
-  </button>
+  {% if App.Users.userData.uploads_layout != 0 %}
+    <button type='button' class='dropdown-item' data-action='more-info-upload' data-uploadid='{{ upload.id }}'>
+      <i class='fas fa-fw fa-info-circle mr-1'></i>{{ 'More information'|trans }}
+    </button>
+  {% endif %}
 
   {% if not upload.immutable and not Entity.isReadOnly %}
     {# ARCHIVE #}
     <div class='dropdown-divider'></div>
     <button type='button' class='dropdown-item hover-warning' data-action='archive-upload' data-uploadid='{{ upload.id }}'>
-      <i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{{ 'Archive/Unarchive'|trans }}
+      <i class='fas fa-fw fa-box-archive mr-1'></i>{{ 'Archive/Unarchive'|trans }}
     </button>
     {# DESTROY #}
     <button type='button' class='dropdown-item hover-danger' data-action='destroy-upload' data-uploadid='{{ upload.id }}'>
-      <i class='fas fa-fw fa-trash-alt fa-fw mr-1'></i>{{ 'Delete'|trans }}
+      <i class='fas fa-fw fa-trash-alt mr-1'></i>{{ 'Delete'|trans }}
     </button>
   {% endif %}
   </div>
