--- a/src/templates/upload-dropdown-menu.html
+++ b/src/templates/upload-dropdown-menu.html
@@ -24,8 +24,7 @@
 
   {# Edit filename (available in view mode too) #}
   {% if not upload.immutable and not Entity.isReadOnly and App.Users.userData.uploads_layout != 0 %}
-    <button type='button' class='dropdown-item' data-action='rename-upload' data-id='{{ upload.id }}' data-type='{{ upload.type }}'
-      data-itemid='{{ upload.item_id }}' data-msg='{{ 'Edit filename'|trans }}'>
+    <button type='button' class='dropdown-item' data-action='rename-upload' data-id='{{ upload.id }}'>
       <i class='fas fa-fw fa-pencil-alt mr-1'></i>{{ 'Edit filename'|trans }}
     </button>
   {% endif %}
