--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -30,7 +30,7 @@
               </span>
               {% endif %}
               {% if mode != 'edit-template' %}
-                <button class='btn lh-normal border-0 p-2 ml-auto mr-2' data-action='toggle-next' type='button' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}'>
+                <button class='btn lh-normal hl-hover-gray p-2 ml-auto mr-2' data-action='toggle-next' type='button' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}'>
                   <i class='fas fa-caret-right fa-fw'></i>
                 </button>
                 <div hidden data-save-hidden='extendedStep_{{ step.id }}' class='w-100'>
