--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -71,7 +71,7 @@
           {% for upload in Entity.entityData.uploads %}
             <tr id='uploadDiv_{{ upload.id }}'>
               <td>
-                <button type='button' class='btn lh-normal hl-hover-gray p-1 mr-1' data-action='toggle-next' data-toggle-target='moreinfoDiv_{{ upload.id }}' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}'>
+                <button type='button' class='btn lh-normal hl-hover-gray p-1 mr-1' data-action='toggle-next' data-toggle-target='moreinfoDiv_{{ upload.id }}' aria-expanded='false' title='{{ 'More information'|trans }}' aria-label='{{ 'More information'|trans }}'>
                   <i class='fas fa-caret-right fa-fw'></i>
                 </button>
                 <span id='upload-filename_{{ upload.id }}' class='text-break'>{{ upload.real_name|raw }}</span>
