--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -158,7 +158,7 @@
               {% endif %}
             </div>
             {# the comment itself is only editable by the owner #}
-            <p class='comment m-2 p-2 {{ comment.userid == Entity.Users.userData.userid ? "editable hl-hover" }}' data-id='{{ comment.id }}'>{{ comment.comment }}</p>
+            <p class='comment m-2 p-2 {{ comment.userid == Entity.Users.userData.userid ? "editable hl-hover" }}' data-id='{{ comment.id }}'>{{ comment.comment|nl2br }}</p>
           </div>
         {% endfor %}
 
