--- a/src/templates/upload-comment.html
+++ b/src/templates/upload-comment.html
@@ -3,5 +3,5 @@
   data-type='{{ upload.type }}'
   data-itemid='{{ upload.item_id }}'
   data-isempty='{{ upload.comment is null ? '1' : '0' }}'
-  data-id='{{ upload.id }}'>{% if upload.comment is null %}{{ 'Click to add a comment'|trans }}{% else %}{{ upload.comment }}{% endif %}
+  data-id='{{ upload.id }}'>{% if upload.comment is null %}{{ 'Click to add a comment'|trans }}{% else %}{{ upload.comment|nl2br }}{% endif %}
 </p>
