--- a/src/templates/favtags-panel.html
+++ b/src/templates/favtags-panel.html
@@ -11,10 +11,10 @@
       </div>
     </div>
     <hr>
-    {% if favTagsArr|length == 0 %}
-      <p>{{ 'No favorite tags are present. Add an existing tag with the form below.'|trans }}</p>
-    {% endif %}
     <div id='favtagsTagsDiv' class='d-flex flex-column'>
+      {% if favTagsArr|length == 0 %}
+        <p>{{ 'No favorite tags are present. Add an existing tag with the form below.'|trans }}</p>
+      {% endif %}
       {% for favtag in favTagsArr %}
       <div data-action='add-tag-filter' data-tag='{{ favtag.tag }}' class='side-panel-item {{ App.Request.query.all('tags')[0] == favtag.tag ? 'selected' : '' }}'>
         {{ favtag.tag }}<a href='#' class='float-right mr-2' data-id='{{ favtag.tags_id }}' data-action='destroy-favtags'><i class='fas fa-trash-alt'></i></a>
@@ -26,7 +26,8 @@
     <div class='input-group mt-2 mb-3'>
       <input id='createFavTagInput' data-autocomplete='tags' type='text' class='form-control form-inline createTagInputFavorite' aria-label='{{ 'Add a tag as favorite'|trans }}' placeholder='{{ 'Add a tag as favorite'|trans }}'>
       <div class='input-group-append'>
-        <button class='btn btn-primary' type='button' title='{{ 'Add'|trans }}' data-action='create-todoitem' aria-label='{{ 'Add'|trans }}'>
+        {# this is a dummy button with no action, all work is done via event listeners on .createTagInputFavorite #}
+        <button class='btn btn-primary' type='button' title='{{ 'Add'|trans }}' aria-label='{{ 'Add'|trans }}'>
           <i class='fas fa-plus fa-fw'></i>
         </button>
       </div>
